# nasomedia-cli

./: README.md  ns-cli.py  ns-cli.spec  pyproject.toml
resource/: docker-compose.yml
resource/app/: main.py
resource/app/models/: __init__.py  model_frame.py
